--- a/index.html
+++ b/index.html
@@ -19,7 +19,33 @@
 	
 		<div class="container">
 		
-			---
+			<center>
+				<div class="jumbotron">
+					<h1>FREE2USE</h1>
+				</div>
+
+				<div class="form-group row">
+					<label for="user">Username:</label>
+					<input type="text" class="form-control" id="user">	
+				</div>			
+
+				<div class="form-group row">
+					<div class="col"><label for="pass">Password:</label></div>
+					<div class="col"><input type="password" class="form-control" id="pass">	</div>
+				</div>
+
+				<div class="form-group row">
+					<Button type="button" class="btn btn-success btn-lg">Iniciar sessão</Button>
+				</div>
+
+				<div class="form-group row">
+					<Button type="button" class="btn btn-success btn-sm">Criar conta</Button>
+				</div>
+
+				<div class="form-group row">
+					<Button type="button" class="btn btn-link">Esqueceu-se da palavra-passe?</Button>
+				</div>
+			</center>
 
 		</div>
 		
