Fields adjusted with col's

--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
 				</div>
 
 				<div class="form-group row">
-					<label for="user">Username:</label>
-					<input type="text" class="form-control" id="user">	
+					<div class="col-lg-2">
+						<label for="user">Nome de utilizador:</label>
+					</div>
+					<div class="col-lg-10">
+						<input type="text" class="form-control" id="user">	
+					</div>
 				</div>			
 
 				<div class="form-group row">
-					<div class="col"><label for="pass">Password:</label></div>
-					<div class="col"><input type="password" class="form-control" id="pass">	</div>
+					<div class="col-lg-2">
+						<label for="pass">Palavra-passe:</label>
+					</div>
+					<div class="col-lg-10">
+						<input type="password" class="form-control" id="pass">
+					</div>
 				</div>
 
 				<div class="form-group row">
@@ -45,6 +53,7 @@
 				<div class="form-group row">
 					<Button type="button" class="btn btn-link">Esqueceu-se da palavra-passe?</Button>
 				</div>
+
 			</center>
 
 		</div>
