--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 				</div>
 
 				<div class="form-group row">
-					<Button type="button" class="btn btn-success btn-sm">Criar conta</Button>
+					<Button type="button" class="btn btn-success btn-sm" id="criar">Criar conta</Button>
 				</div>
 
 				<div class="form-group row">
-					<Button type="button" class="btn btn-link">Esqueceu-se da palavra-passe?</Button>
+					<Button type="button" class="btn btn-link" id="esquecer">Esqueceu-se da palavra-passe?</Button>
 				</div>
 
 			</center>
