--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<!--- JS -->		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-		<script src="index.js"></script>
+		<script src="js/index.js"></script>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">		
 		<meta charset="utf-8">
