--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="form-group row">
-					<Button type="button" class="btn btn-success btn-lg">Iniciar sessão</Button>
+					<Button type="button" class="btn btn-success btn-lg" id="iniciar">Iniciar sessão</Button>
 				</div>
 
 				<div class="form-group row">
