--- a/html/conta/esquecer.html
+++ b/html/conta/esquecer.html
@@ -5,9 +5,17 @@
 				<h1>FREE2USE</h1>
 			</div>
 
-			WIP-ESQUECER
+			<div class="form-group row">
+				<div class="col-lg-2">
+					<label for="user">Introduza o e-mail:</label>
+				</div>
+				<div class="col-lg-10">
+					<input type="text" class="form-control" id="email">	
+				</div>
+			</div>	
 
 		</center>
 	</body>
+	<script src="js/conta/esquecer.js"></script>
 <html>
 	
