added button for 'esquecer'

--- a/html/conta/esquecer.html
+++ b/html/conta/esquecer.html
@@ -14,6 +14,10 @@
 				</div>
 			</div>	
 
+			<div class="form-group row">
+				<Button type="button" class="btn btn-success btn-lg" id="submit-email">Iniciar sessão</Button>
+			</div>
+
 		</center>
 	</body>
 	<script src="js/conta/esquecer.js"></script>
