Renamed fields / Universal jumbotron

--- a/html/conta/esquecer.html
+++ b/html/conta/esquecer.html
@@ -1,13 +1,9 @@
 <html>
 	<body>
 		<center>
-			<div class="jumbotron">
-				<h1>FREE2USE</h1>
-			</div>
-
 			<div class="form-group row">
 				<div class="col-lg-2">
-					<label for="user">Introduza o e-mail:</label>
+					<label for="user">Introduza o seu e-mail:</label>
 				</div>
 				<div class="col-lg-10">
 					<input type="text" class="form-control" id="email">	
@@ -15,7 +11,7 @@
 			</div>	
 
 			<div class="form-group row">
-				<Button type="button" class="btn btn-success btn-lg" id="submit-email">Iniciar sessão</Button>
+				<Button type="button" class="btn btn-success btn-lg" id="submit-email">Enviar email de recuperação</Button>
 			</div>
 
 		</center>
