--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 	
 	<body>
 
-		<div class="jumbotron">
-			<h1>FREE2USE</h1>
-		</div>		
+		<center>
+			<div class="jumbotron">
+				<h1>FREE2USE</h1>
+			</div>	
+		</center>	
 	
 		<div class="container">
 
