--- a/html/conta/login.html
+++ b/html/conta/login.html
@@ -19,6 +19,10 @@
 					</div>
 				</div>
 
+				<div class="form-group row checkbox">
+				    <input type="checkbox">Relembrar
+			  	</div>
+
 				<div class="form-group row">
 					<Button type="button" class="btn btn-success btn-lg" id="iniciar">Iniciar sessão</Button>
 				</div>
