Persistent home button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<div class="jumbotron">
 				<h1>FREE2USE</h1>
 			</div>	
+			<a class="btn btn-primary glyphicon glyphicon-home" id="home"></a>
 		</center>	
 	
 		<div class="container">
