--- a/html/conta/login.html
+++ b/html/conta/login.html
@@ -20,7 +20,7 @@
 				</div>
 
 				<div class="form-group row checkbox">
-				    <input type="checkbox">Relembrar
+				    <input type="checkbox">Manter sessão iniciada
 			  	</div>
 
 				<div class="form-group row">
