--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 			<div class="jumbotron">
 				<h1>FREE2USE</h1>
 			</div>	
-			<a class="btn btn-primary glyphicon glyphicon-home" id="home"></a>
+			<div class="row">
+				<a class="btn btn-primary glyphicon glyphicon-home" id="home"></a>
+			</div>
 		</center>	
 	
 		<div class="container">
