--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 			</div>	
 		</center>	
 
+		<!--- HOME BUTTON -->
 		<a class="btn btn-primary glyphicon glyphicon-home" id="home"></a>
 	
 		<div class="container">
-
+			<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->
 		</div>
 		
 	</body>
