--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 
 		<center>
-			<div class="jumbotron">
+			<div class="jumbotron" style="background-color: #2222ff; color: #ffffff;">
 				<h1>FREE2USE</h1>	
 			</div>	
 		</center>	
