--- a/html/conta/criar.html
+++ b/html/conta/criar.html
@@ -48,7 +48,7 @@
 			</div>			
 
 			<div class="form-group row">
-				<Button type="button" class="btn btn-success btn-sm" id="confirmar">Confirmar</Button>
+				<Button type="button" class="btn btn-success btn-lg" id="confirmar">Confirmar</Button>
 			</div>
 
 		</center>
