Logout button added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	
 	<body>
 
+		<!--- JUMBO TRON -->
 		<center>
 			<div class="jumbotron" style="background-color: #0060ff; color: #ffffff;">
 				<h1>FREE2USE</h1>	
@@ -25,10 +26,12 @@
 
 		<!--- HOME BUTTON -->
 		<a class="btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
+
+		<!--- LOGOUT BUTTON -->
+		<a class="btn btn-sm btn-danger glyphicon glyphicon-off" id="logout" style="float: right;"> Sair </a>
 	
-		<div class="container">
-			<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->
-		</div>
+		<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->	
+		<div class="container"></div>
 		
 	</body>
 		
