better show/hide handling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 	<head> 
 		<!---  CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css"  type="text/css" />
+		<link rel="stylesheet" href="css/styles.css" type="text/css" />
 
 		<!--- JS -->		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -25,10 +26,10 @@
 		</center>	
 
 		<!--- HOME BUTTON -->
-		<a class="btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
+		<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
 
 		<!--- LOGOUT BUTTON -->
-		<a class="btn btn-sm btn-danger glyphicon glyphicon-off" id="logout" style="float: right;"> Sair </a>
+		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align_right" id="logout"> Sair </a>
 	
 		<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->	
 		<div class="container"></div>
