--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
 
 		<!--- LOGOUT BUTTON -->
-		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off alignright" id="logout"> Sair </a>
+		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off" style="float: right;" id="logout"> Sair </a>
 	
 		<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->	
 		<div class="container"></div>
