--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 		<!--- JUMBO TRON -->
 		<center>
-			<div class="jumbotron" style="background-color: #0060ff; color: #ffffff;">
+			<div class="jumbotron" style="background-image: url('images/bg.png'); background-repeat: no-repeat; background-attachment: fixed;
+    background-position: center; background-size:cover; color: #ffffff;">
 				<h1>FREE2USE</h1>	
 			</div>	
 		</center>	
