--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 		<!--- JUMBO TRON -->
 		<center>
-			<div class="jumbotron" style="background-image: url('images/bg.png'); background-repeat: no-repeat; background-attachment: fixed;
-    background-position: center; background-size:cover; color: #ffffff;">
+			<div class="jumbotron jumbotron-bg">
 				<h1>FREE2USE</h1>	
 			</div>	
 		</center>	
@@ -30,7 +29,7 @@
 		<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
 
 		<!--- LOGOUT BUTTON -->
-		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off" style="float: right;" id="logout"> Sair </a>
+		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
 	
 		<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->	
 		<div class="container"></div>
