--- a/html/menu_principal/tecnico.html
+++ b/html/menu_principal/tecnico.html
@@ -2,7 +2,21 @@
 	<body>
 		<center>
 			
-			WIP-TECNICO
+			<div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="fechar">Fechar sala de estudo</Button>
+			</div>
+
+			<div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="abrir">Abrir sala de estudo</Button>
+			</div>
+
+			<div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="adicionar">Adicionar sala de estudo</Button>
+			</div>
+
+			<div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="remover">Remover sala de estudo</Button>
+			</div>
 
 		</center>
 	</body>
