restructure / tecnico init (2)

--- a/html/login.html
+++ b/html/login.html
@@ -28,7 +28,7 @@
 				</div>
 
 			</center>
-			<script src="js/conta/login.js"></script>
+			<script src="js/login.js"></script>
 	</body>
 
 <html>
