--- a/index.html
+++ b/index.html
@@ -1,40 +1,302 @@
-<html>
-	<head> 
-		<!---  CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css"  type="text/css" />
-		<link rel="stylesheet" href="css/styles.css" type="text/css" />
+login<!DOCTYPE html>
+<html lang="en">
 
-		<!--- JS -->		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-		<script src="index.js"></script>
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1">		
-		<meta charset="utf-8">
-		<title>FREE2USE</title>
-		
-	</head>
-	
-	<body>
+<head>
+  <meta charset="UTF-8">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
+  <meta content="description" name="description">
+  <meta name="google" content="notranslate" />
+  <!---  CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css" type="text/css" />
+  <link rel="stylesheet" href="css/styles.css" type="text/css" />
 
-		<!--- JUMBO TRON -->
-		<center>
-			<div class="jumbotron jumbotron-bg">
-				<h1>FREE2USE</h1>
-			</div>	
-		</center>	
+  <!--- JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="index.js"></script>
 
-		<!--- HOME BUTTON -->
-		<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
 
-		<!--- LOGOUT BUTTON -->
-		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
-	
-		<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->	
-		<div class="container"></div>
-		
-	</body>
-		
-<html>
-	
+  <!-- Disable tap highlight on IE -->
+  <meta name="msapplication-tap-highlight" content="no">
+
+
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link href="./assets/favicon.ico" rel="icon">
+
+  <link href="" rel="stylesheet">
+
+
+  <title>Free2Use</title>
+
+  <link href="./main.550dcf66.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- Add your content of header -->
+  <header>
+    <nav class="navbar navbar-default active">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+          <a class="navbar-brand" href="./index.html" title="">
+          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
+          FREE2USE
+        </a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="./index.html" title="">Página opcional 1</a></li>
+            <li><a href="./login.html" title="">Página opcional 2</a></li>
+            <li>
+              <p>
+                <a href="./components.html" class="btn btn-default navbar-btn" title="">Botão opcional</a>
+              </p>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Add your site or app content here -->
+  <div class="hero-full-container background-image-container white-text-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h1>FREE2USE</h1>
+          <p>O SISTEMA DE GESTÃO DE SALAS DE ESTUDO DA UMa</p>
+          <br>
+          <a href="./login.html" class="btn btn-default btn-lg" title="">Entrar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="text-center">
+            <h2>O que fazemos?</h2>
+            <p>O Free2Use é um sistema desenhado para permitir a gestão e utilização das salas de estudo da UMa
+              <br> Tem como objetivos permitir uma utilização mais eficiente permitindo o agendamento das salas a toda a comunidade académica.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="section-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+
+
+          <div id="carousel-example-generic" class="carousel carousel-fade slide" data-ride="carousel">
+
+            <div class="carousel-inner" role="listbox">
+
+              <div class="item active">
+                <img class="img-responsive" src="./assets/images/img-06.jpg" alt="First slide">
+                <div class="carousel-caption card-shadow reveal">
+
+                  <h3>A garantia de um lugar onde estudar</h3>
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            <span class="sr-only">Next</span>
+                          </a>
+                  <p>
+                    Nunca te aconteceu ter aquele trabalho para entregar até às 00h e não haver lugar nenhum em qualquer sala de estudo? A nós também, por isso criamos o Free2Use.
+                  </p>
+
+                  <p>
+                    Agora podes agendar e reservar um lugar numa sala de estudo na UMa para que tenhas a garantia que vais ter uma mesa, uma cadeira e uma eduroam muito, muito, muito lenta. Pretty cool huh?
+                  </p>
+
+                </div>
+              </div>
+              <div class="item">
+                <img class="img-responsive" src="./assets/images/img-07.jpg" alt="First slide">
+                <div class="carousel-caption card-shadow reveal">
+
+                  <h3>Também pensamos em vocês!</h3>
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                              <span class="sr-only">Previous</span>
+                            </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                              <span class="sr-only">Next</span>
+                            </a>
+                  <p>
+                    Professores, não nos esquecemos de vocês. Acabaram as aulas particulares nos gabinetes, podem usar as salas de estudo!
+                  </p>
+
+                  <p>
+                    Para aulas de reposição, ou simplesmente para o horário de atendimento. Tirar dúvidas não tem de significar uma fila à porta do vosso gabinete!
+                  </p>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="section-container">
+    <div class="container text-center">
+      <div class="row section-container-spacer">
+        <div class="col-xs-12 col-md-12">
+          <h2>Developers</h2>
+          <p>A equipa que construiu este sistema e, humildade à parte, merecia ter 20 😅</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Joaquim Perez</h3>
+          <h4>2029015</h4>
+          <p></p>
+
+        </div>
+
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-02.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Alex Faria</h3>
+          <h4>2021114</h4>
+          <p></p>
+
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-03.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Luis Freitas</h3>
+          <h4>2029715</h4>
+          <p></p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-12 col-md-1">
+          </div>
+
+          <div class="col-xs-12 col-md-5">
+            <br><br><br><br>
+            <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+            <h3>Cláudio Sardinha</h3>
+            <h4>2030215</h4>
+            <p></p>
+
+          </div>
+
+
+
+
+
+          <div class="col-xs-12 col-md-5">
+            <br><br><br><br>
+            <img src="./assets/images/profil-02.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+            <h3>Miguel Pires</h3>
+            <h4>2030715</h4>
+            <p></p>
+          </div>
+
+          <div class="col-xs-12 col-md-1">
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  </div>
+  <div class="card-image col-xs-12" style="background-image: url('/assets/images/img-01.jpg')">
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+      navbarFixedTopAnimation();
+    });
+  </script>
+
+  <footer class="footer-container white-text-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <h3>Free2Use</h3>
+          <div class="row">
+            <div class="col-xs-12 col-sm-6">
+              <p>Licenciatura em Engenharia Informática @ UMa <br> Engenharia de Requisitos <a href="http://www.mashup-template.com/" title="Create website with free html template"></a><a href="https://www.unsplash.com/" title="Beautiful Free Images"></a>
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+              <p class="text-right">
+                <small>
+              Joaquim Perez&nbsp; | &nbsp;
+              Alexis Faria&nbsp; | &nbsp;
+              Luis Freitas&nbsp; | &nbsp;
+              Cláudio Sardinha&nbsp; | &nbsp;
+              Miguel Pires
+            </small>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+      navActivePage();
+      scrollRevelation('.reveal');
+    });
+  </script>
+
+  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
+
+<script>
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+  ga('create', 'UA-XXXXX-X', 'auto');
+  ga('send', 'pageview');
+</script>
+
+-->
+  <script type="text/javascript" src="./main.0cf8b554.js"></script>
+</body>
+
+</html>
