additional imports (merging)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head> 
 		<!---  CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.9/css/bootstrap-dialog.min.css"  type="text/css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 				type="text/css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 	type="text/css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,600|Martel:400,900"	type="text/css">
 		<link rel="stylesheet" href="css/styles.css" type="text/css" />
 
 		<!--- JS -->		
@@ -10,8 +11,14 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
 		<script src="index.js"></script>
 		
-		<meta name="viewport" content="width=device-width, initial-scale=1">		
-		<meta charset="utf-8">
+		<!--- META -->
+	  <meta charset="UTF-8">
+		<meta content="IE=edge" http-equiv="X-UA-Compatible">
+		<meta content="width=device-width,initial-scale=1" name="viewport">
+		<meta content="description" name="description">
+		<meta name="google" content="notranslate" />
+		<meta name="msapplication-tap-highlight" content="no">
+
 		<title>FREE2USE</title>
 		
 	</head>
