--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 	<head> 
 		<!---  CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 				type="text/css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 	type="text/css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hind+Siliguri:300,600|Martel:400,900"	type="text/css">
-		<link rel="stylesheet" href="css/styles.css" type="text/css" />
+		<link rel="stylesheet" href="css/styles.css"/>
+		<link rel="stylesheet" href="css/beauty.css"/>
 
 		<!--- JS -->		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -25,12 +23,18 @@
 	
 	<body>
 
-		<!--- JUMBO TRON -->
-		<center>
-			<div class="jumbotron jumbotron-bg">
-				<h1>FREE2USE</h1>
-			</div>	
-		</center>	
+		<div class="hero-full-container background-image-container white-text-container">
+    <div class="container">
+	      <div class="row">
+	        <div class="col-xs-12">
+	          <h1>FREE2USE</h1>
+	          <p>O SISTEMA DE GESTÃO DE SALAS DE ESTUDO DA UMa</p>
+	          <br>
+	          <a href="./login.html" class="btn btn-default btn-lg" title="">Entrar</a>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
 
 		<!--- HOME BUTTON -->
 		<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
