login (still merging)

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 	<body>
 
 		<div class="hero-full-container background-image-container white-text-container">
-    <div class="container">
+	    <div class="container" id="content">
 	      <div class="row">
 	        <div class="col-xs-12">
 	          <h1>FREE2USE</h1>
 	          <p>O SISTEMA DE GESTÃO DE SALAS DE ESTUDO DA UMa</p>
 	          <br>
-	          <a href="./login.html" class="btn btn-default btn-lg" title="">Entrar</a>
+	          <a class="btn btn-default btn-lg" title="" id="entrar">Entrar</a>
 	        </div>
 	      </div>
 	    </div>
