Home and logout button inside container (still merging)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
 	<body>
 
 		<div class="hero-full-container background-image-container white-text-container">
-	    <div class="container" id="content">
+
+			<!--- HOME BUTTON -->
+			<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
+
+			<!--- LOGOUT BUTTON -->
+			<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
+
+	    <div class="white-text-container" id="content">
+	      
+	      <!-- CONTEÚDO -->
 	      <div class="row">
 	        <div class="col-xs-12">
 	          <h1>FREE2USE</h1>
@@ -33,17 +42,10 @@
 	          <a class="btn btn-default btn-lg" title="" id="entrar">Entrar</a>
 	        </div>
 	      </div>
+
 	    </div>
+
 	  </div>
-
-		<!--- HOME BUTTON -->
-		<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
-
-		<!--- LOGOUT BUTTON -->
-		<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
-	
-		<!--- AQUI VAI SENDO INSERIDO O CONTEÚDO -->	
-		<div class="container"></div>
 		
 	</body>
 		
