Cleanup / Header and footer added (still merging)

--- a/html/login.html
+++ b/html/login.html
@@ -1,34 +1,45 @@
 <html>
 	<body>
-		<center>
-				<div class="form-group row">
-					<div class="col-lg-2">
-						<label for="user">Nome de utilizador:</label>
-					</div>
-					<div class="col-lg-10">
-						<input type="text" class="form-control" id="user">	
-					</div>
-				</div>			
+		<div class="section-container">
+	    <div class="container">
+	      <div class="row">
+	        <div class="col-xs-12 col-md-8 col-md-offset-2">
+	          <h1 class="text-center">Free 2 Login</h1>
+	          <p align="center">Entra com as credenciais do Infoalunos</p>
 
-				<div class="form-group row">
-					<div class="col-lg-2">
-						<label for="pass">Palavra-passe:</label>
-					</div>
-					<div class="col-lg-10">
-						<input type="password" class="form-control" id="pass">
-					</div>
-				</div>
+	          <center>
+	        		<div class="form-group row">
+	        			<div class="col-lg-2">
+	        				<label for="user">Utilizador</label>
+	        			</div>
+	        			<div class="col-lg-10">
+	        				<input type="text" class="form-control" id="user">
+	        			</div>
+	        		</div>
 
-				<div class="form-group row checkbox">
-				  <input type="checkbox">Manter sessão iniciada
-			  </div>
+	        		<div class="form-group row">
+	        			<div class="col-lg-2">
+	        				<label for="pass">Password</label>
+	        			</div>
+	        			<div class="col-lg-10">
+	        				<input type="password" class="form-control" id="pass">
+	        			</div>
+	        		</div>
 
-				<div class="form-group row">
-					<Button type="button" class="btn btn-success btn-lg" id="iniciar">Iniciar sessão</Button>
-				</div>
+	        		<div class="form-group row checkbox">
+	        			<input type="checkbox">Manter sessão iniciada
+	        		</div>
 
-			</center>
-			<script src="js/login.js"></script>
+	        		<div class="form-group row">
+	        			<Button type="button" class="btn btn-success btn-lg" id="iniciar">Iniciar sessão</Button>
+	        		</div>
+
+	        	</center>
+	        	<script src="js/login.js"></script>
+	       </div>
+	      </div>
+	    </div>
+	  </div>
 	</body>
 
 <html>
