--- a/index.html
+++ b/index.html
@@ -23,29 +23,76 @@
 	
 	<body>
 
-		<div class="hero-full-container background-image-container white-text-container">
+		<!--- HEADER -->
+		<header>
+			<nav class="navbar navbar-default active">
+	      <div class="container">
 
-			<!--- HOME BUTTON -->
-			<a class="hidden btn btn-primary glyphicon glyphicon-home" id="home"> Início </a>
+	        <div class="navbar-header">
+	          <a class="navbar-brand" href="" title="" id="home">
+		          <img src="./images/mashup-icon.svg" class="navbar-logo-img" alt="">
+		          FREE2USE
+	        	</a>
+	        </div>
 
-			<!--- LOGOUT BUTTON -->
-			<a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
+	        <a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
 
-	    <div class="white-text-container" id="content">
-	      
-	      <!-- CONTEÚDO -->
+	      </div>
+	    </nav>
+	  </header>
+	  <!-- -->
+
+		<!-- CONTEÚDO -->
+	  <div class="container" id="content">
+
+			<div class="hero-full-container background-image-container white-text-container">
+
+		    <div class="white-text-container">
+		      
+		      <div class="row">
+		        <div class="col-xs-12">
+		          <h1>FREE2USE</h1>
+		          <p>O SISTEMA DE GESTÃO DE SALAS DE ESTUDO DA UMa</p>
+		          <br>
+		          <a class="btn btn-default btn-lg" title="" id="entrar">Entrar</a>
+		        </div>
+		      </div>
+
+		    </div>
+
+		  </div>
+
+		</div>
+		<!-- -->
+
+	  <!--- FOOTER -->
+	  <footer class="footer-container white-text-container">
+	    <div class="container">
 	      <div class="row">
 	        <div class="col-xs-12">
-	          <h1>FREE2USE</h1>
-	          <p>O SISTEMA DE GESTÃO DE SALAS DE ESTUDO DA UMa</p>
-	          <br>
-	          <a class="btn btn-default btn-lg" title="" id="entrar">Entrar</a>
+	          <h3>Free2Use</h3>
+	          <div class="row">
+	            <div class="col-xs-12 col-sm-6">
+	              <p>Licenciatura em Engenharia Informática @ UMa <br> Engenharia de Requisitos <a href="http://www.mashup-template.com/" title="Create website with free html template"></a><a href="https://www.unsplash.com/" title="Beautiful Free Images"></a>
+	              </p>
+	            </div>
+	            <div class="col-xs-12 col-sm-6">
+	              <p class="text-right">
+	                <small>
+	              Joaquim Perez&nbsp; | &nbsp;
+	              Alexis Faria&nbsp; | &nbsp;
+	              Luis Freitas&nbsp; | &nbsp;
+	              Cláudio Sardinha&nbsp; | &nbsp;
+	              Miguel Pires
+	            </small>
+	              </p>
+	            </div>
+	          </div>
 	        </div>
 	      </div>
-
 	    </div>
-
-	  </div>
+	  </footer>
+	  <!-- -->
 		
 	</body>
 		
