Cleanup / Home button fixed (still merging)

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	        	</a>
 	        </div>
 
-	        <a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout"> Sair </a>
+	        <a class="hidden btn btn-sm btn-danger glyphicon glyphicon-off align-right" id="logout" href="./index.html"> Sair </a>
 
 	      </div>
 	    </nav>
