--- a/index.html
+++ b/index.html
@@ -60,9 +60,157 @@
 
 		    </div>
 
-		  </div>
+		    <div class="section-container">
+		    <div class="container">
+		      <div class="row">
+		        <div class="col-xs-12 col-md-8 col-md-offset-2">
+		          <div class="text-center">
+		            <h2>O que fazemos?</h2>
+		            <p>O Free2Use é um sistema desenhado para permitir a gestão e utilização das salas de estudo da UMa
+		              <br> Tem como objetivos permitir uma utilização mais eficiente permitindo o agendamento das salas a toda a comunidade académica.</p>
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+				  </div>
 
-		</div>
+				  <div class="section-container">
+				    <div class="container">
+				      <div class="row">
+				        <div class="col-xs-12">
+
+
+				          <div id="carousel-example-generic" class="carousel carousel-fade slide" data-ride="carousel">
+
+				            <div class="carousel-inner" role="listbox">
+
+				              <div class="item active">
+				                <img class="img-responsive" src="./assets/images/img-06.jpg" alt="First slide">
+				                <div class="carousel-caption card-shadow reveal">
+
+				                  <h3>A garantia de um lugar onde estudar</h3>
+				                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				                            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+				                            <span class="sr-only">Previous</span>
+				                          </a>
+				                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+				                            <span class="sr-only">Next</span>
+				                          </a>
+				                  <p>
+				                    Nunca te aconteceu ter aquele trabalho para entregar até às 00h e não haver lugar nenhum em qualquer sala de estudo? A nós também, por isso criamos o Free2Use.
+				                  </p>
+
+				                  <p>
+				                    Agora podes agendar e reservar um lugar numa sala de estudo na UMa para que tenhas a garantia que vais ter uma mesa, uma cadeira e uma eduroam muito, muito, muito lenta. Pretty cool huh?
+				                  </p>
+
+				                </div>
+				              </div>
+				              <div class="item">
+				                <img class="img-responsive" src="./assets/images/img-07.jpg" alt="First slide">
+				                <div class="carousel-caption card-shadow reveal">
+
+				                  <h3>Também pensamos em vocês!</h3>
+				                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				                              <i class="fa fa-chevron-left" aria-hidden="true"></i>
+				                              <span class="sr-only">Previous</span>
+				                            </a>
+				                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				                              <i class="fa fa-chevron-right" aria-hidden="true"></i>
+				                              <span class="sr-only">Next</span>
+				                            </a>
+				                  <p>
+				                    Professores, não nos esquecemos de vocês. Acabaram as aulas particulares nos gabinetes, podem usar as salas de estudo!
+				                  </p>
+
+				                  <p>
+				                    Para aulas de reposição, ou simplesmente para o horário de atendimento. Tirar dúvidas não tem de significar uma fila à porta do vosso gabinete!
+				                  </p>
+
+				                </div>
+				              </div>
+				            </div>
+
+				          </div>
+
+
+				        </div>
+
+				      </div>
+
+				    </div>
+				  </div>
+
+				  <div class="section-container">
+				    <div class="container text-center">
+				      <div class="row section-container-spacer">
+				        <div class="col-xs-12 col-md-12">
+				          <h2>Developers</h2>
+				          <p>A equipa que construiu este sistema e, humildade à parte, merecia ter 20 😅</p>
+				        </div>
+				      </div>
+
+				      <div class="row">
+				        <div class="col-xs-12 col-md-4">
+				          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+				          <h3>Joaquim Perez</h3>
+				          <h4>2029015</h4>
+				          <p></p>
+
+				        </div>
+
+				        <div class="col-xs-12 col-md-4">
+				          <img src="./assets/images/profil-02.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+				          <h3>Alex Faria</h3>
+				          <h4>2021114</h4>
+				          <p></p>
+
+				        </div>
+				        <div class="col-xs-12 col-md-4">
+				          <img src="./assets/images/profil-03.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+				          <h3>Luis Freitas</h3>
+				          <h4>2029715</h4>
+				          <p></p>
+				        </div>
+
+				        <div class="row">
+
+				          <div class="col-xs-12 col-md-1">
+				          </div>
+
+				          <div class="col-xs-12 col-md-5">
+				            <br><br><br><br>
+				            <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+				            <h3>Cláudio Sardinha</h3>
+				            <h4>2030215</h4>
+				            <p></p>
+
+				          </div>
+
+
+
+
+
+				          <div class="col-xs-12 col-md-5">
+				            <br><br><br><br>
+				            <img src="./assets/images/profil-02.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+				            <h3>Miguel Pires</h3>
+				            <h4>2030715</h4>
+				            <p></p>
+				          </div>
+
+				          <div class="col-xs-12 col-md-1">
+				          </div>
+
+				        </div>
+				      </div>
+				    </div>
+				  </div>
+
+				  </div>
+
+				</div>
 		<!-- -->
 
 	  <!--- FOOTER -->
