Content container now properly used (still merging)

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	  <!-- -->
 
 		<!-- CONTEÚDO -->
-	  <div class="container" id="content"></div>
+	  <div id="content"></div>
 		<!-- -->
 
 	  <!--- FOOTER -->
