--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
 	      </div>
 	    </nav>
 	  </header>
+		<div class="hero-full-container background-image-container white-text-container">
+
+			    <div class="white-text-container">
+			      
+			      <div class="row">
+			        <div class="col-xs-12">
+			          <h1>FREE2USE</h1>
+			          <p>O SISTEMA DE GESTÃO DE SALAS DE ESTUDO DA UMa</p>
+			          <br>
+			          <a class="btn btn-default btn-lg" title="" id="entrar">Entrar</a>
+			        </div>
+			      </div>
+
+			    </div>
+
+  	</div>
 	  <!-- -->
 
 		<!-- CONTEÚDO -->
