--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	      <div class="container">
 
 	        <div class="navbar-header">
-	          <a class="navbar-brand" href="" title="" id="home">
+	          <a class="navbar-brand" id="home">
 		          <img src="./images/mashup-icon.svg" class="navbar-logo-img" alt="">
 		          FREE2USE
 	        	</a>
