home button fixed (??)

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 	      <div class="container">
 
 	        <div class="navbar-header">
-	          <a class="navbar-brand" id="home">
+	          <div class="navbar-brand" id="home">
 		          <img src="./images/mashup-icon.svg" class="navbar-logo-img" alt="">
 		          FREE2USE
-	        	</a>
+	        	</div>
 	        </div>
 
 	        <a class="hidden btn btn-sm btn-danger align-right" id="logout" href="./index.html"> Sair </a>
