home button done (i guess)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<nav class="navbar navbar-default navbar-fixed-top active">
 	      <div class="container">
 
-	        <div class="navbar-header">
+	        <div class="navbar-header btn">
 	          <div class="navbar-brand" id="home">
 		          <img src="./images/mashup-icon.svg" class="navbar-logo-img" alt="">
 		          FREE2USE
