--- a/html/home.html
+++ b/html/home.html
@@ -21,7 +21,7 @@
 		        <div class="col-xs-12">
 
 
-		          <div id="carousel-example-generic" class="carousel carousel-fade slide" data-ride="carousel">
+		          <div id="carousel-example-generic" class="carousel carousel-fade slide" data-ride="carousel" data-interval="2000">
 
 		            <div class="carousel-inner" role="listbox">
 
