--- a/html/home.html
+++ b/html/home.html
@@ -21,7 +21,7 @@
 		        <div class="col-xs-12">
 
 
-		          <div id="carousel-example-generic" class="carousel carousel-fade slide" data-ride="carousel" data-interval="2000">
+		          <div id="carousel-example-generic" class="carousel carousel-fade slide" data-ride="carousel" data-interval="3000">
 
 		            <div class="carousel-inner" role="listbox">
 
@@ -30,14 +30,12 @@
 		                <div class="carousel-caption card-shadow reveal">
 
 		                  <h3>A garantia de um lugar onde estudar</h3>
-		                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-		                            <i class="fa fa-chevron-left" aria-hidden="true"></i>
-		                            <span class="sr-only">Previous</span>
-		                          </a>
-		                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-		                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-		                            <span class="sr-only">Next</span>
-		                          </a>
+		                  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+										    &larr;
+										  </a>
+										  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+										  	&rarr;
+										  </a>
 		                  <p>
 		                    Nunca te aconteceu ter aquele trabalho para entregar até às 00h e não haver lugar nenhum em qualquer sala de estudo? A nós também, por isso criamos o Free2Use.
 		                  </p>
