--- a/html/tecnico/remover.html
+++ b/html/tecnico/remover.html
@@ -1,11 +1,45 @@
 <html>
+	<head>
+	<head>
+		<h1><center>Remover Sala</center></h1>
+
+	</head>
+	</head>
 	<body>
-		<center>
 
-			WIP-REMOVER
-
-		</center>
+	<div class="section-container">
+	    <div class="container">
+	          <center>
+	        		<div class="form-group row">
+	        			<div class="col-lg-2"> </div>
+	        			<div class="col-lg-8">
+	        				<label><font size="10">Selecione a sala:</font></h4>
+	        			</div>
+	        		</div>
+	        		<div class="form-group row">
+	        			<div class="col-lg-4"> </div>
+	        			<div class="col-lg-4">
+	        				<input type="text" class="form-control">
+	        			</div>
+	        		</div>
+ 	 		<div class="form-group row">
+ 	 				<div class="col-lg-4"> </div>
+					<select class="col-lg-4" size="3">
+ 	 		         <option value="Sala 1">Sala 1</option>
+ 	 		         <option value="Sala 2">Sala 2</option>
+ 	 		         <option value="Sala 3">Sala 3</option>
+ 	 		         <option value="Anfiteatro 1">Anfiteatro 1</option>
+ 	 		         <option value="Laboratorio">Laboratorio</option>
+					</select>
+	 		 </div>
+	 		 <div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="abrir" style="height:80px;width:380px" >Remover</Button>
+			</div>   
+	        </center>
+	    </div>
+	  </div>
+	</center>
 	</body>
-	<script src="js/tecnico/remover.js"></script>
+	<script src="js/tecnico/abrir.js"></script>
 <html>
 	
