--- a/html/tecnico/adicionar.html
+++ b/html/tecnico/adicionar.html
@@ -1,11 +1,46 @@
 <html>
+	<head>
+		<h1><center>Abrir Sala</center></h1>
+
+	</head>
 	<body>
-		<center>
 
-			WIP-ADICIONAR
-
-		</center>
+	<div class="section-container">
+	    <div class="container">
+	          <center>
+	        	<div class="form-group row">
+	        		<div class="col-lg-4"></div>
+	        		<div class="col-lg-1">
+	        			<label> <font size="6">Nome </font> </label>
+	        		</div>
+	        		<div class="col-lg-3">
+	        			<input type="text" class="form-control" id="nome">
+	        		</div>
+	        	</div>
+	        	<div class="form-group row">
+	        		<div class="col-lg-4"></div>
+	        		<div class="col-lg-1">
+	        			<label> <font size="6">Andar </font> </label>
+	        		</div>
+	        		<div class="col-lg-3">
+	        			<input type="number" class="form-control" id="andar">
+	        		</div>
+	        	</div>
+	        	<div class="form-group row">
+	        		<div class="col-lg-4"></div>
+	        		<div class="col-lg-2">
+	        			<label> <font size="6">Número de Lugares </font> </label>
+	        		</div>
+	        		<div class="col-lg-2">
+	        			<input type="number" class="form-control" id="lugares" style="height:100px;">
+	        		</div>
+	        	</div>
+	 		 <div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="adicionar" style="height:80px;width:380px" >Adicionar</Button>
+			</div>   
+	        </center>
+	    </div>
+	  </div>
 	</body>
-	<script src="js/tecnico/adicionar.js"></script>
 <html>
 	
