Criação do util.Desenvolver a classe professor

--- a/html/prof.html
+++ b/html/prof.html
@@ -2,10 +2,36 @@
 	<body>
 		<center>
 
-			WIP-PROF
+			<h1> Professor </h1>
+			<div class="container">
+
+				<div class="row">
+					<div class="col-md-12">
+							<Button type="button" class="btn btn-success btn-lg" id="duvida">
+									Agendar dúvidas
+							</Button>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-12">
+						<Button type="button" class="btn btn-success btn-lg" id="aula">
+								Aula de reposição
+						</Button>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-12">
+						<Button type="button" class="btn btn-success btn-lg" id="visualizar">
+								Ver reservas
+						</Button>
+					</div>
+				</div>
+
+			</div>
 
 		</center>
 	</body>
 	<script src="js/prof.js"></script>
 <html>
-	
