Cleanup / Images are now organized

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	        <div class="navbar-header btn">
 	          <div class="navbar-brand" id="home">
-		          <img src="./images/mashup-icon.svg" class="navbar-logo-img" alt="">
+		          <img src="./images/etc/mashup-icon.svg" class="navbar-logo-img" alt="">
 		          FREE2USE
 	        	</div>
 	        </div>
@@ -70,7 +70,7 @@
 	          <h3>Free2Use</h3>
 	          <div class="row">
 	            <div class="col-xs-12 col-sm-6">
-	              <p>Licenciatura em Engenharia Informática @ UMa <br> Engenharia de Requisitos <a href="http://www.mashup-template.com/" title="Create website with free html template"></a><a href="https://www.unsplash.com/" title="Beautiful Free Images"></a>
+	              <p>Licenciatura em Engenharia Informática @ UMa <br> Engenharia de Requisitos
 	              </p>
 	            </div>
 	            <div class="col-xs-12 col-sm-6">
