--- a/html/home.html
+++ b/html/home.html
@@ -83,7 +83,7 @@
 
 		      <div class="row">
 		        <div class="col-xs-12 col-md-4">
-		          <img src="./images/avatars/joaquim.jpeg" alt="" class="reveal img-responsive reveal-content image-center">
+		          <img src="./images/avatars/joaquim.jpeg" alt="" class="avatar reveal img-responsive reveal-content image-center">
 		          <h3>Joaquim Perez</h3>
 		          <h4>2029015</h4>
 		          <p></p>
@@ -91,14 +91,14 @@
 		        </div>
 
 		        <div class="col-xs-12 col-md-4">
-		          <img src="./images/avatars/alex.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+		          <img src="./images/avatars/alex.jpg" alt="" class="avatar reveal img-responsive reveal-content image-center">
 		          <h3>Alex Faria</h3>
 		          <h4>2021114</h4>
 		          <p></p>
 
 		        </div>
 		        <div class="col-xs-12 col-md-4">
-		          <img src="./images/avatars/luis.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+		          <img src="./images/avatars/luis.jpg" alt="" class="avatar reveal img-responsive reveal-content image-center">
 		          <h3>Luis Freitas</h3>
 		          <h4>2029715</h4>
 		          <p></p>
@@ -111,7 +111,7 @@
 
 		          <div class="col-xs-12 col-md-5">
 		            <br><br><br><br>
-		            <img src="./images/avatars/claudio.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+		            <img src="./images/avatars/claudio.jpg" alt="" class="avatar reveal img-responsive reveal-content image-center">
 		            <h3>Cláudio Sardinha</h3>
 		            <h4>2030215</h4>
 		            <p></p>
@@ -124,7 +124,7 @@
 
 			          <div class="col-xs-12 col-md-5">
 			            <br><br><br><br>
-			            <img src="./images/avatars/miguel.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+			            <img src="./images/avatars/miguel.jpg" alt="" class="avatar reveal img-responsive reveal-content image-center">
 			            <h3>Miguel Pires</h3>
 			            <h4>2030715</h4>
 			            <p></p>
