--- a/html/tecnico/adicionar.html
+++ b/html/tecnico/adicionar.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
+	<head>
 		<h1><center>Abrir Sala</center></h1>
-
+	</head>
 	</head>
 	<body>
 
@@ -14,7 +15,7 @@
 	        			<label> <font size="6">Nome </font> </label>
 	        		</div>
 	        		<div class="col-lg-3">
-	        			<input type="text" class="form-control" id="nome">
+	        			<input type="text" style="height:80px;width:380px" class="form-control" id="nome">
 	        		</div>
 	        	</div>
 	        	<div class="form-group row">
@@ -23,7 +24,7 @@
 	        			<label> <font size="6">Andar </font> </label>
 	        		</div>
 	        		<div class="col-lg-3">
-	        			<input type="number" class="form-control" id="andar">
+	        			<input type="number" style="height:80px;width:380px" class="form-control" id="andar">
 	        		</div>
 	        	</div>
 	        	<div class="form-group row">
@@ -32,7 +33,7 @@
 	        			<label> <font size="6">Número de Lugares </font> </label>
 	        		</div>
 	        		<div class="col-lg-2">
-	        			<input type="number" class="form-control" id="lugares" style="height:100px;">
+	        			<input type="number" style="height:80px;width:380px" class="form-control" id="lugares" style="height:100px;">
 	        		</div>
 	        	</div>
 	 		 <div class="form-group row">
@@ -41,6 +42,8 @@
 	        </center>
 	    </div>
 	  </div>
-	</body>
-<html>
+	  	</body>
+	<script src="js/tecnico/abrir.js"></script>
+	<script src="js/tecnico/adicionar.js"></script>
+</html>
 	
