--- a/html/tecnico/fechar.html
+++ b/html/tecnico/fechar.html
@@ -19,21 +19,21 @@
 	        		<div class="form-group row">
 	        			<div class="col-lg-4"> </div>
 	        			<div class="col-lg-4">
-	        				<input type="text" class="form-control">
+	        				<input style="height:80px;width:380px" type="text" class="form-control">
 	        			</div>
 	        		</div>
  	 		<div class="form-group row">
  	 				<div class="col-lg-4"> </div>
-					<select class="col-lg-4" size="3">
- 	 		         <option value="Sala 1">Sala 1</option>
- 	 		         <option value="Sala 2">Sala 2</option>
- 	 		         <option value="Sala 3">Sala 3</option>
- 	 		         <option value="Anfiteatro 1">Anfiteatro 1</option>
- 	 		         <option value="Laboratorio">Laboratorio</option>
+					<select style="height:80px;width:380px">
+ 	 		         <option value="Sala 1"> <center> Sala 1 </center></option>
+ 	 		         <option value="Sala 2"><center> Sala 2 </center></option>
+ 	 		         <option value="Sala 3"><center> Sala 3 </center></option>
+ 	 		         <option value="Anfiteatro 1"><center> Anfiteatro 1 </center></option>
+ 	 		         <option value="Laboratorio"><center> Núcleo </center></option>
 					</select>
 	 		 </div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="abrir" style="height:80px;width:380px" >Fechar </Button>
+				<Button type="button" class="btn btn-basic btn-lg" id="fechar" style="height:80px;width:380px" >Fechar</Button>
 			</div>   
 	        </center>
 	    </div>
@@ -41,5 +41,6 @@
 	</center>
 	</body>
 	<script src="js/tecnico/abrir.js"></script>
-<html>
+	<script src="js/tecnico/adicionar.js"></script>
+</html>
 	
