--- a/html/tecnico/fechar.html
+++ b/html/tecnico/fechar.html
@@ -33,7 +33,7 @@
 					</select>
 	 		 </div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="fechar" style="height:80px;width:380px" >Fechar</Button>
+				<Button type="button" class="btn btn-basic btn-lg" id="action" style="height:80px;width:380px" >Fechar</Button>
 			</div>   
 	        </center>
 	    </div>
