--- a/html/tecnico/adicionar.html
+++ b/html/tecnico/adicionar.html
@@ -37,13 +37,12 @@
 	        		</div>
 	        	</div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="adicionar" style="height:80px;width:380px" >Adicionar</Button>
+				<Button type="button" class="btn btn-basic btn-lg" id="action" style="height:80px;width:380px" >Adicionar</Button>
 			</div>   
 	        </center>
 	    </div>
 	  </div>
 	  	</body>
-	<script src="js/tecnico/abrir.js"></script>
 	<script src="js/tecnico/adicionar.js"></script>
 </html>
 	
