--- a/html/tecnico/remover.html
+++ b/html/tecnico/remover.html
@@ -33,7 +33,7 @@
 					</select>
 	 		 </div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="remover" style="height:80px;width:380px" >Remover</Button>
+				<Button type="button" class="btn btn-basic btn-lg" id="action" style="height:80px;width:380px" >Remover</Button>
 			</div>   
 	        </center>
 	    </div>
@@ -41,5 +41,6 @@
 	</center>
 	</body>
 	<script src="js/tecnico/abrir.js"></script>
+	<script src="js/tecnico/adicionar.js"></script>
 </html>
 	
