--- a/html/tecnico/opconcluida.html
+++ b/html/tecnico/opconcluida.html
@@ -22,7 +22,7 @@
 	</div>
 	</div>
 	</body>
-	<script src="js/tecnico/adicionar.js">
+	<script src="js/tecnico/opconcluida.js">
 	</script>
 </html>
 	
