--- a/html/tecnico/abrir.html
+++ b/html/tecnico/abrir.html
@@ -25,15 +25,11 @@
  	 		<div class="form-group row">
  	 				<div class="col-lg-4"> </div>
 					<select style="height:80px;width:380px">
- 	 		         <option value="Sala 1"> <center> Sala 1 </center></option>
- 	 		         <option value="Sala 2"><center> Sala 2 </center></option>
- 	 		         <option value="Sala 3"><center> Sala 3 </center></option>
- 	 		         <option value="Anfiteatro 1"><center> Anfiteatro 1 </center></option>
- 	 		         <option value="Laboratorio"><center> Núcleo </center></option>
+ 	 		        
 					</select>
 	 		 </div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="action" style="height:80px;width:380px" >Abrir</Button>
+				<Button type="button" class="btn btn-basic btn-lg" id="abrir" style="height:80px;width:380px" >Abrir</Button>
 			</div>   
 	        </center>
 	    </div>
@@ -41,6 +37,13 @@
 	</center>
 	</body>
 	<script src="js/tecnico/abrir.js"></script>
-	<script src="js/tecnico/adicionar.js"></script>
+	<script src="js/tecnico/opconcluida.js">
+		var opcoes = salasfechadas;
+		var selectBox = document.getElementsByTagName('select');
+		for(var i = 0, l = opcoes.length; i < l; i++){
+  		var opcao = opcoes[i];
+  		selectBox.add( opcoes[i].nome );
+		}
+	</script>
 </html>
 	
