--- a/html/tecnico.html
+++ b/html/tecnico.html
@@ -18,8 +18,13 @@
 			</div>
 
 			<div class="form-group row">
+				<Button type="button" class="btn btn-basic btn-lg" id="alterar">Alterar Capacidade</Button>
+			</div>
+			
+			<div class="form-group row">
 				<Button type="button" class="btn btn-basic btn-lg" id="remover">Remover sala de estudo</Button>
 			</div>
+
 
 		</center>
 	</body>
