--- a/html/tecnico/fechar.html
+++ b/html/tecnico/fechar.html
@@ -8,17 +8,13 @@
 	        				<label><font size="10">Selecione a sala:</font></h4>
 	        			</div>
 	        		</div>
-	        		<div class="form-group row">
-	        			<div class="col-lg">
-	        				<input style="height:80px;width:380px" type="text" class="form-control">
-	        			</div>
-	        		</div>
- 	 		<div class="form-group row">
-					<select style="height:80px;width:380px">
+
+  	 		<div class="form-group row">
+					<select id="selectfechar" style="height:80px;width:380px">
  	 		        
 					</select>
 	 		 </div>
-	 		 <div class="form-group row">
+ 		 <div class="form-group row">
 				<Button type="button" class="btn btn-basic btn-lg" id="fechar" style="height:80px;width:380px" >Fechar</Button>
 			</div>   
 	        </center>
@@ -26,14 +22,16 @@
 	  </div>
 	</center>
 	</body>
-	<script src="js/tecnico/abrir.js"></script>
-	<script src="js/tecnico/opconcluida.js">
-		var opcoes = salasabertas;
-		var selectBox = document.getElementsByTagName('select');
-		for(var i = 0, l = opcoes.length; i < l; i++){
-  		var opcao = opcoes[i];
-  		selectBox.add( opcoes[i].nome );
-		}
+	<script src="js/tecnico/opconcluida.js"></script>
+	<script>
+		$(document).ready(function(){
+			salas.forEach(function(s)
+			{
+				if(!s["fechada"]){
+   					$('select').append("<option>"+s["nome"]+"</option>")
+				}
+			});
+		})
 	</script>
 </html>
 	
