--- a/html/tecnico/opconcluida.html
+++ b/html/tecnico/opconcluida.html
@@ -6,7 +6,7 @@
 				<div class="form-group row">
 			     <div class="col-lg">
 		        	<button type="button" class="btn-success btn-lg" id="hometec">
-		          		<span class="glyphicon glyphicon-home"></span> Menu Inicial
+		          		Menu Inicial
 		       		</button>
 		   		 </div>
 				</div>
