--- a/html/tecnico/remover.html
+++ b/html/tecnico/remover.html
@@ -8,13 +8,9 @@
 	        				<label><font size="10">Selecione a sala:</font></h4>
 	        			</div>
 	        		</div>
-	        		<div class="form-group row">
-	        			<div class="col-lg">
-	        				<input style="height:80px;width:380px" type="text" class="form-control">
-	        			</div>
-	        		</div>
+
  	 		<div class="form-group row">
-					<select style="height:80px;width:380px">
+					<select id="selectremover" style="height:80px;width:380px">
  	 		        
 					</select>
 	 		 </div>
@@ -26,14 +22,15 @@
 	  </div>
 	</center>
 	</body>
-	<script src="js/tecnico/abrir.js"></script>
-	<script src="js/tecnico/opconcluida.js">
-		var opcoes = salasfechadas.concat(salasabertas);
-		var selectBox = document.getElementsByTagName('select');
-		for(var i = 0, l = opcoes.length; i < l; i++){
-  		var opcao = opcoes[i];
-  		selectBox.add( opcoes[i].nome );
-		}
+	<script src="js/tecnico/opconcluida.js"></script>
+	<script>
+		$(document).ready(function(){
+			salas.forEach(function(s)
+			{	
+   			$('select').append("<option>"+s["nome"]+"</option>")
+			});
+		})
 	</script>
+
 </html>
 	
