Verifca conflitos e remove alunos

--- a/html/util/aula.html
+++ b/html/util/aula.html
@@ -2,9 +2,14 @@
 	<body>
 		<center>
 
-			<h1> Reserva de sala </h1>
+			<h1> Reserva de sala para aula </h1>
+			<div id="dataHora">
 
+			</div>
+			<div id="listaSalas">
+			</div>
 		</center>
+
 	</body>
 	<script src="js/util/aula.js"></script>
 <html>
