'Go back' button added

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 	      <div class="container">
 
 	        <div class="navbar-header btn">
-	          <div class="navbar-brand" id="home">
+	          <div class="navbar-brand home">
 		          <img src="./images/etc/mashup-icon.svg" class="navbar-logo-img" alt="">
 		          FREE2USE
 	        	</div>
 	        </div>
 
-	        <a class="hidden btn btn-sm btn-danger align-right" id="logout" href="./index.html"> Sair </a>
-
 	      </div>
+
+        <a class="hidden btn btn-md btn-danger align-right" id="logout" href="./index.html"> Sair </a>
+        <button class="hidden btn btn-md btn-success home" id="goback">&larr;</button>
 	    </nav>
 	  </header>
 		<div class="hero-full-container background-image-container white-text-container">
