Visualizar reservas dos professores

--- a/html/util/visualizarReserva.html
+++ b/html/util/visualizarReserva.html
@@ -1,10 +1,12 @@
 <html>
 	<body>
 		<center>
-
 			<h1> Visualizar reserva </h1>
+			<div id="reservas">
 
+			</div>
 		</center>
+
 	</body>
 	<script src="js/util/visualizarReserva.js"></script>
 <html>
