--- a/html/prof.html
+++ b/html/prof.html
@@ -8,7 +8,7 @@
 				<div class="row">
 					<div class="col-md-12">
 							<Button type="button" class="btn btn-success btn-lg" id="duvida">
-									Agendar dúvidas
+									Agendamento de horário de dúvidas
 							</Button>
 					</div>
 				</div>
@@ -16,7 +16,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<Button type="button" class="btn btn-success btn-lg" id="aula">
-								Aula de reposição
+								Agendamento de aula de reposição/extraordinária
 						</Button>
 					</div>
 				</div>
@@ -24,7 +24,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<Button type="button" class="btn btn-success btn-lg" id="visualizar">
-								Ver reservas
+								Consultar reservas
 						</Button>
 					</div>
 				</div>
