--- a/html/util/aula.html
+++ b/html/util/aula.html
@@ -2,12 +2,23 @@
 	<body>
 		<center>
 
-			<h1 > Reserva de sala para aula </h1>
-			<div id="dataHora">
+			<h1> Agendamento de aula de reposição/extraordinária </h1>
 
-			</div>
+			<h3> Detalhes da reserva: </h3>
+
+			<label for="begin">Hora de início</label> 
+			<input id="begin" maxlength="5" type="text" placeholder="HH:MM"><br><br>
+
+			<label for="end">Hora de fim</label> 
+			<input id="end" maxlength="5" type="text" placeholder="HH:MM"><br><br>
+
+			<label for="end">Data da reserva</label> 
+			<input id='data' type='date'><br><br>
+
+			<h3> Lista de salas: </h3>
 			<div id="listaSalas">
 			</div>
+
 		</center>
 
 	</body>
