--- a/html/util/reserva.html
+++ b/html/util/reserva.html
@@ -2,7 +2,8 @@
 	<body>
 		<center>
 
-			<h1> Reserva </h1>
+			<h1> Agendamento de horário de dúvidas </h1>
+			<h3> Lista de salas disponíveis: </h3>
 			<div id="listaSalas">
 
 			</div>
