--- a/html/util/sala.html
+++ b/html/util/sala.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<center>
-			<h1 id="titulo"></h1>
+			<h1> Agendamento de horário de dúvidas </h1>
 			<div id="lista_Lugares">
 			</div>
 		</center>
