beautified tecnico and prof

--- a/html/tecnico.html
+++ b/html/tecnico.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<h1><center>TÉCNICO</center></h1>
+		<h1><center>Free2Use - Técnico</center></h1>
 	</head>
 	<body>
 		<center>
@@ -18,7 +18,7 @@
 			</div>
 
 			<div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="alterar">Alterar Capacidade</Button>
+				<Button type="button" class="btn btn-basic btn-lg" id="alterar">Alterar sala de estudo</Button>
 			</div>
 			
 			<div class="form-group row">
