--- a/html/prof.html
+++ b/html/prof.html
@@ -2,7 +2,7 @@
 	<body>
 		<center>
 
-			<h1> Professor </h1>
+			<h1> Free2Use - Professor </h1>
 			<div class="container">
 
 				<div class="row">
