--- a/html/tecnico/abrir.html
+++ b/html/tecnico/abrir.html
@@ -1,20 +1,14 @@
 <html>
 	<body>
-	<h1><center>Abrir Sala</center></h1>
+	<h1><center>Abrir sala de estudo</center></h1>
 	    <div class="container">
 	          <center>
-	        		<div class="form-group row">
-	        			<div class="col-lg">
-	        				<label><font size="10">Selecione a sala:</font></h4>
-	        			</div>
-	        		</div>
  	 		<div class="form-group row">
-					<select id="selectabrir" style="height:80px;width:380px">
- 	 		        
-					</select>
+ 	 				<h3>Lista de salas (fechadas):</h3>
+					<select id="selectabrir" style="height:80px;width:380px"></select>
 	 		 </div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="abrir" style="height:80px;width:380px" >Abrir</Button>
+				<Button type="button" class="btn btn-success btn-lg" id="abrir" style="height:80px;width:380px" >Abrir sala</Button>
 			</div>   
 	        </center>
 	    </div>
