--- a/html/tecnico/adicionar.html
+++ b/html/tecnico/adicionar.html
@@ -1,11 +1,11 @@
 <html>
 	<body>
-			<h1><center>Adicionar Sala</center></h1>
+			<h1><center>Adicionar sala de estudo</center></h1>
 	    <div class="container">
 	          <center>
 	        	<div class="form-group row">
 	        		<div class="col-lg-6">
-	        			<label> <font size="6">Nome </font> </label>
+	        			<h3>Nome da sala:</h3>
 	        		</div>
 	        		<div class="col-lg-6">
 	        			<input type="text" style="height:80px;width:380px" class="form-control" id="nome">
@@ -13,7 +13,7 @@
 	        	</div>
 	        	<div class="form-group row">
 	        		<div class="col-lg-6">
-	        			<label> <font size="6">Andar </font> </label>
+	        			<h3>Andar:</h3>
 	        		</div>
 	        		<div class="col-lg-6">
 	        			<input type="number" style="height:80px;width:380px" class="form-control" id="andar">
@@ -21,14 +21,14 @@
 	        	</div>
 	        	<div class="form-group row">
 	        		<div class="col-lg-6">
-	        			<label> <font size="6">Número de Lugares </font> </label>
+	        			<h3>Capacidade (Número de lugares):</h3>
 	        		</div>
 	        		<div class="col-lg-6">
 	        			<input type="number" style="height:80px;width:380px" class="form-control" id="lugares" style="height:100px;">
 	        		</div>
 	        	</div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="adicionar" style="height:80px;width:380px" >Adicionar</Button>
+				<Button type="button" class="btn btn-success btn-lg" id="adicionar" style="height:80px;width:380px" >Criar nova sala</Button>
 			</div>   
 	        </center>
 	    </div>
