--- a/html/tecnico/alterar.html
+++ b/html/tecnico/alterar.html
@@ -1,32 +1,22 @@
 <html>
 	<body>
-		<h1><center>Alterar Capacidade</center></h1>
+		<h1><center>Alterar sala de estudo</center></h1>
 	    <div class="container">
 	        <center>
-	        <div class="form-group row">
-	        	<div class="col-lg">
-	        			<label><font size="10">Selecione a sala:</font></h4>
-	        	</div>
-	       	</div>
 
  	 		<div class="form-group row">
-					<select id="selectalterar" style="height:80px;width:380px">
- 	 		        
-					</select>
+ 	 				<h3>Lista de salas:</h3>
+					<select id="selectalterar" style="height:80px;width:380px"></select>
 	 		 </div>
 
-	        <div class="form-group row">
-	        	<div class="col-lg">
-	        			<label><font size="10">Nova capacidade :</font></h4>
-	        	</div>
-	       	</div>
-	        <div class="form-group row">
-	        <div class="col-lg">
-	        			<input id="capacidade" style="height:80px;width:380px" type="number" class="form-control">
-	        </div>
-	        </div>
+
+      <div class="form-group row">
+					<h3>Nova capacidade:</h3>	        	
+	        <input id="capacidade" style="height:80px;width:380px" type="number" class="form-control">
+	    </div>
+
 	 		<div class="form-group row">
-						<Button type="button" class="btn btn-basic btn-lg" id="alterar" style="height:80px;width:380px" >Alterar</Button>
+						<Button type="button" class="btn btn-success btn-lg" id="alterar" style="height:80px;width:380px" >Confirmar alterações</Button>
 			</div>   
 	        </center>
 	   </div>
