--- a/html/tecnico/fechar.html
+++ b/html/tecnico/fechar.html
@@ -1,21 +1,15 @@
 <html>
 	<body>
-			<h1><center>Fechar Sala</center></h1>
+			<h1><center>Fechar sala de estudo</center></h1>
 	    <div class="container">
 	          <center>
-	        		<div class="form-group row">
-	        			<div class="col-lg">
-	        				<label><font size="10">Selecione a sala:</font></h4>
-	        			</div>
-	        		</div>
 
   	 		<div class="form-group row">
-					<select id="selectfechar" style="height:80px;width:380px">
- 	 		        
-					</select>
+	        <h3>Lista de salas (abertas):</h3>  	 			
+					<select id="selectfechar" style="height:80px;width:380px"></select>
 	 		 </div>
  		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="fechar" style="height:80px;width:380px" >Fechar</Button>
+				<Button type="button" class="btn btn-success btn-lg" id="fechar" style="height:80px;width:380px" >Fechar sala</Button>
 			</div>   
 	        </center>
 	    </div>
