--- a/html/tecnico/remover.html
+++ b/html/tecnico/remover.html
@@ -1,21 +1,16 @@
 <html>
 	<body>
-		<h1><center>Remover Sala</center></h1>
+		<h1><center>Remover sala de estudo</center></h1>
 	    <div class="container">
 	          <center>
-	        		<div class="form-group row">
-	        			<div class="col-lg">
-	        				<label><font size="10">Selecione a sala:</font></h4>
-	        			</div>
-	        		</div>
 
  	 		<div class="form-group row">
-					<select id="selectremover" style="height:80px;width:380px">
- 	 		        
-					</select>
+ 	 				<h3>Lista de salas:</h3>
+					<select id="selectremover" style="height:80px;width:380px"></select>
 	 		 </div>
+
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-basic btn-lg" id="remover" style="height:80px;width:380px" >Remover</Button>
+				<Button type="button" class="btn btn-success btn-lg" id="remover" style="height:80px;width:380px" >Confirmar alterações</Button>
 			</div>   
 	        </center>
 	    </div>
