beautified tecnico and prof (3)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	      </div>
 
-        <a class="hidden btn btn-md btn-danger align-right" id="logout" href="./index.html"> Sair </a>
+        <button class="hidden btn btn-md btn-danger align-right" id="logout"> Sair </button>
         <button class="hidden btn btn-md btn-success home" id="goback">&larr;</button>
 	    </nav>
 	  </header>
