--- a/html/util/reservaAula.html
+++ b/html/util/reservaAula.html
@@ -1,12 +1,17 @@
 <html>
 	<body>
 		<center>
-
-			<h1> Sucesso </h1>
-			<div id="data">
-			</div>
+				<h1>Operação efetuada com sucesso!</h1>
+					<div class="container">
+						<div class="form-group row">
+					     <div class="col-lg">
+				        	<button type="button" class="btn-success btn-lg" onclick='goToHome("prof");'>
+				          		Voltar para o menu inicial
+				       		</button>
+				   		 </div>
+						</div>
+					</div>
 		</center>
-
 	</body>
 	<script src="js/util/reservaAula.js"></script>
 <html>
