--- a/html/tecnico/alterar.html
+++ b/html/tecnico/alterar.html
@@ -16,7 +16,7 @@
 	    </div>
 
 	 		<div class="form-group row">
-						<Button type="button" class="btn btn-success btn-lg" id="alterar" style="height:80px;width:380px" >Confirmar alterações</Button>
+						<Button type="button" style="white-space: normal;" class="btn btn-success btn-lg" id="alterar" style="height:80px;width:380px" >Confirmar alterações</Button>
 			</div>   
 	        </center>
 	   </div>
