--- a/html/login.html
+++ b/html/login.html
@@ -31,7 +31,7 @@
 	        		</div>
 
 	        		<div class="form-group row">
-	        			<Button type="button" class="btn btn-success btn-lg" id="iniciar">Iniciar sessão</Button>
+	        			<Button type="button" style="white-space: normal;" class="btn btn-success btn-lg" id="iniciar">Iniciar sessão</Button>
 	        		</div>
 
 	        	</center>
