--- a/html/tecnico/abrir.html
+++ b/html/tecnico/abrir.html
@@ -8,7 +8,7 @@
 					<select id="selectabrir" style="height:80px;width:380px"></select>
 	 		 </div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-success btn-lg" id="abrir" style="height:80px;width:380px" >Abrir sala</Button>
+				<Button type="button" style="white-space: normal;" class="btn btn-success btn-lg" id="abrir" style="height:80px;width:380px" >Abrir sala</Button>
 			</div>   
 	        </center>
 	    </div>
