--- a/html/tecnico/adicionar.html
+++ b/html/tecnico/adicionar.html
@@ -28,7 +28,7 @@
 	        		</div>
 	        	</div>
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-success btn-lg" id="adicionar" style="height:80px;width:380px" >Criar nova sala</Button>
+				<Button type="button" style="white-space: normal;" class="btn btn-success btn-lg" id="adicionar" style="height:80px;width:380px" >Criar nova sala</Button>
 			</div>   
 	        </center>
 	    </div>
