--- a/html/tecnico/fechar.html
+++ b/html/tecnico/fechar.html
@@ -9,7 +9,7 @@
 					<select id="selectfechar" style="height:80px;width:380px"></select>
 	 		 </div>
  		 <div class="form-group row">
-				<Button type="button" class="btn btn-success btn-lg" id="fechar" style="height:80px;width:380px" >Fechar sala</Button>
+				<Button type="button" style="white-space: normal;" class="btn btn-success btn-lg" id="fechar" style="height:80px;width:380px" >Fechar sala</Button>
 			</div>   
 	        </center>
 	    </div>
