--- a/html/tecnico/remover.html
+++ b/html/tecnico/remover.html
@@ -10,7 +10,7 @@
 	 		 </div>
 
 	 		 <div class="form-group row">
-				<Button type="button" class="btn btn-success btn-lg" id="remover" style="height:80px;width:380px" >Confirmar alterações</Button>
+				<Button type="button" style="white-space: normal;" class="btn btn-success btn-lg" id="remover" style="height:80px;width:380px" >Confirmar alterações</Button>
 			</div>   
 	        </center>
 	    </div>
