--- a/html/util/reservaAula.html
+++ b/html/util/reservaAula.html
@@ -5,7 +5,7 @@
 					<div class="container">
 						<div class="form-group row">
 					     <div class="col-lg">
-				        	<button type="button" class="btn-success btn-lg" onclick='goToHome("prof");'>
+				        	<button type="button" style="white-space: normal;" class="btn-success btn-lg" onclick='goToHome("prof");'>
 				          		Voltar para o menu inicial
 				       		</button>
 				   		 </div>
