Empty fields detection

--- a/html/util/aula.html
+++ b/html/util/aula.html
@@ -15,7 +15,7 @@
 			<label for="end">Data da reserva</label> 
 			<input id='data' type='date'><br><br>
 
-			<h3> Lista de salas: </h3>
+			<h3> Lista de salas (selecione a sala para confirmar a reserva): </h3>
 			<div id="listaSalas">
 			</div>
 
