--- a/html/aluno.html
+++ b/html/aluno.html
@@ -1,10 +1,23 @@
 <html>
 	<body>
 		<center>
-			<h1>Menu do aluno</h1>
-		
-			<button class="btn btn-primary"id="bReservar" style="width:300px">Reservar lugar</button><br><br><br>
-			<button class="btn btn-primary"id="bMinhasReservas" style="width:300px">Minhas reservas</button>
+			<h1>Free2Use - Aluno</h1>
+
+			<div class="container">
+
+				<div class="row">
+					<div class="col-md-12">
+							<button class="btn btn-primary btn-lg" id="bReservar" style="white-space: normal;"> Efetuar reserva </button><br><br>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-md-12">
+						<button class="btn btn-primary btn-lg" id="bMinhasReservas" style="white-space: normal;"> Consultar reservas</button>
+					</div>
+				</div>
+			</div>
+			
 		</center>
 	</body>
 	<script src="js/aluno.js"></script>
