--- a/html/aluno/minhasReservas.html
+++ b/html/aluno/minhasReservas.html
@@ -4,10 +4,12 @@
 		<center>
 			<div class="container" id="reservasIndividuais">
 				<h1>Reservas individuais</h1>
+				<h3>Lista de reservas:</h3>
 				
 			</div>
 			<div class="container" id="reservasGrupo">
 				<h1>Reservas de grupo</h1>
+				<h3>Lista de reservas:</h3>				
 				
 			</div>
 		</center>
