--- a/html/aluno/slotSalaEstudo1.html
+++ b/html/aluno/slotSalaEstudo1.html
@@ -6,12 +6,12 @@
 				<h1>Organização dos lugares na sala</h1>
 			</div>
 
-			<div id="slots" style="margin-bottom:10px;justify-content:center;align-items:center">
+			<div id="slots">
 				
 			</div>
 			<div>
-				<label style="margin-bottom:10px;border-style:solid">Porta</label><br><br>
-				<button id="bEscolherLugar" type="button" class="btn btn-primary">Escolher</button>
+				<br><br><label style="border-style:solid">Porta</label><br><br>
+				<button id="bEscolherLugar" type="button" class="btn btn-primary">Confirmar reserva</button>
 			</div>
 
 		</center>
