--- a/html/aluno/tipoReserva.html
+++ b/html/aluno/tipoReserva.html
@@ -2,17 +2,15 @@
 <script src="js/aluno/tipoReserva.js"></script>
 	<body>
 		<center>
-			<div>
-				<h1>Tipo de reserva</h1>
-			</div>
-
+			<h1>Efetuar reserva</h1>
+			<h3>Tipo de reserva:</h3>
 			<div class="radio" style="margin-bottom:20px">		
-  					<label><input type="radio" name="tipoReserva" value="rIndividual">Reserva Individual</label>
-					<label style="margin-left:20px"><input type="radio" name="tipoReserva" value="rGrupo">Reserva Grupo</label>
+  					<label><input type="radio" name="tipoReserva" value="rIndividual">Reserva individual</label>
+					<label style="margin-left:20px"><input type="radio" name="tipoReserva" value="rGrupo">Reserva de grupo</label>
 			</div>
 			
 			<div>
-				<button id="bTipoReserva" type="button" class="btn btn-primary">Escolher</button>
+				<button id="bTipoReserva" type="button" class="btn btn-primary">Escolher tipo de reserva</button>
 			</div>
 
 		</center>
