--- a/html/prof/reserva.html
+++ b/html/prof/reserva.html
@@ -1,10 +1,13 @@
 <html>
 	<body>
 		<center>
+
 			<h1> Agendamento de horário de dúvidas </h1>
-			<div id="lista_Lugares">
+			<h3> Lista de salas disponíveis: </h3>
+			<div id="listaSalas">
+
 			</div>
 		</center>
 	</body>
-	<script src="js/util/sala.js"></script>
+	<script src="js/prof/reserva.js"></script>
 <html>
