--- a/html/prof/reservaAula.html
+++ b/html/prof/reservaAula.html
@@ -13,5 +13,5 @@
 					</div>
 		</center>
 	</body>
-	<script src="js/util/reservaAula.js"></script>
+	<script src="js/prof/reservaAula.js"></script>
 <html>
