--- a/html/prof/sala.html
+++ b/html/prof/sala.html
@@ -1,13 +1,10 @@
 <html>
 	<body>
 		<center>
-
 			<h1> Agendamento de horário de dúvidas </h1>
-			<h3> Lista de salas disponíveis: </h3>
-			<div id="listaSalas">
-
+			<div id="lista_Lugares">
 			</div>
 		</center>
 	</body>
-	<script src="js/util/reserva.js"></script>
+	<script src="js/prof/sala.js"></script>
 <html>
